# AtomsX

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  Dockerfile.prod  README.md  conftest.py  docker-entrypoint.dev.sh  e2e_tests.py  pyproject.toml
backend/apps/core/: __init__.py  authentication.py  models.py  security_tests.py  tasks.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/sessions/: __init__.py  admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/apps/sessions/migrations/: 0001_initial.py
backend/apps/users/: __init__.py  admin.py  models.py  multi_provider.py  oidc_client.py  tests.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_add_avatar_url.py
backend/apps/workspaces/: __init__.py  admin.py  consumers.py  data_utils.py  docker_utils.py  models.py  preview_token.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/apps/workspaces/management/commands/: prebuild_workspace_images.py
backend/apps/workspaces/migrations/: 0001_initial.py  0002_add_data_dir_path.py  0003_add_workspace_token.py
backend/config/: __init__.py  asgi.py  celery.py  routing.py  settings.py  urls.py  wsgi.py
docs/: API.md  ARCHITECTURE.md
frontend/: Dockerfile.dev  Dockerfile.prod  docker-entrypoint.dev.sh  index.html  nginx.prod.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/: CodeView.vue  FileContent.vue  FileTree.vue  Toast.vue  ToastContainer.vue  TreeNode.vue
frontend/src/composables/: useFileBrowser.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  notification.ts  session.ts
gateway/: Dockerfile  docker-entrypoint.sh  nginx.conf  nginx.conf.template
gateway/lua/: auth_check.lua
help-docs/claude-sdk-agent/: 00-main.md  01-quickstart.md  02-python-sdk-full.md  03-02-streaming-output.md  03-04-process-permission.md  03-05-user-input-in-loop.md  03-07-chat-sessions.md  03-12-modifying-system-prompts.md  03-13-connecting-mcp.md  03-16-agent-slash-commands.md  03-17-agent-skill.md  use-other-mcp-and-base-url.md  use-other-model.md
openspec/: config.yaml
workspace-template/: Dockerfile
workspace-template/scripts/: start.sh
workspace-template/template/: index.html  package.json  vite.config.js
workspace-templates/ubuntu-24.04/: Dockerfile  README.md  pyproject.toml
workspace-templates/ubuntu-24.04/scripts/: entrypoint.sh  placeholder_server.py  programs.conf  start_preview.sh  supervisord.conf
workspace-templates/ubuntu-24.04/src/workspace_client/: __init__.py  agent.py  client.py  config.py  main.py
(+95 files in other folders)
